# SUB_Rov

./: .gitignore  CMakeLists.txt  JMU_Rov.pro  README.md  SUB_Rov.pro  SUB_Rov.pro.user.13e5a69  SUB_Rov.pro.user.358b0b5  SubRov.pro  SubRov.vcxproj  SubRov.vcxproj.filters  SubRov_resource.rc  SubRov_zh_CN.ts  img.qrc  main.cpp  main.qml  msvc_make.bat  qml.qrc  res.qrc
doc/: ROV使用帮助文档.md  ROV按键映射.md  user_proc_des.md  修改内容.txt
example/FakeLowerComputer/: FakeLowerComputer.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  socketmanager.cpp  socketmanager.h
example/FakeUpperComputer/: FakeUpperComputer.pro  mainwindow.cpp  mainwindow.ui  socketmanager.cpp  socketmanager.h
example/opencv_android_test/: README_zh_cn.md  imageprovider.cpp  imageprovider.h  main.cpp  main.qml  opencv_android_test.pro  videomanager.cpp  videomanager.h
libs/QJoysticks/examples/build-JoystickList-Desktop_Qt_5_14_2_MSVC2017_64bit-Debug/: Makefile  Makefile.Debug  Makefile.Release
libs/QJoysticks/examples/build-JoystickList-Desktop_Qt_5_14_2_MSVC2017_64bit-Release/: .qmake.stash  Makefile  Makefile.Debug  Makefile.Release
libs/QJoysticks/src/: QJoysticks.cpp
libs/QJoysticks/src/QJoysticks/: SDL_Joysticks.cpp  SDL_Joysticks.h
libs/users/: user_proc.lib
libs_msvc/users/: user_proc.lib
moc/: moc_predefs.h.cbt
qml/: ControllWindow.qml  KeyHandler.qml  RovGamepad.qml  Splash.qml
qml/Info/: BodyDir.qml  RovFlag.qml  RovInfo.qml  RovInfoSwitch.qml
qml/ToolBar/: RovToolButton.qml  RovToolbar.qml
qml/Video/: SubView.qml  VideoView.qml
qml/View/: AboutView.qml  MainView.qml  SettingsView.qml
src/: RovApplication.cpp  RovApplication.h  RovBase.cpp  RovBase.h  RovControlCore.cpp  RovControlCore.h  RovToolBox.cpp  RovToolBox.h
src/Log/: MyLogging.cpp  MyLogging.h
src/Settings/: SettingsManager.cpp  SettingsManager.h  joysticksettings.cpp  joysticksettings.h
src/joystick/: JoyManager.cpp  JoyManager.h  JoyStick.cpp  JoyStick.h  joysticker.cpp  joysticker.h  joystickmanager.cpp  joystickmanager.h  joythread.cpp  joythread.h
src/keyboard/: KeyManager.cpp  KeyManager.h  keyflag.cpp  keyflag.h
src/qml/: AboutPage.qml  ButtonInfo.qml  ButtonSecondToolbar.qml  Joysticks.qml  MyButton.qml  MyFlag.qml  MyGamePad.qml  MySwitch.qml  RovInfo.qml  RovSider.qml  SecondToolbar.qml  Setting.qml  SplashScreen.qml  VideoBackground.qml  VideoPage.qml
src/robot/: Oilvalve.cpp  Oilvalve.h
src/setting/: SettingManager.cpp  SettingManager.h
src/socket/: ReceiveCommand.h  ReceiveManager.cpp  ReceiveManager.h  ReceiveManager.h.autosave  ReciveManager.h.autosave  SendCommand.h  SendManager.cpp  SendManager.h  Sendcommand.cpp  SocketManager.cpp  SocketManager.h  SocketManager.h.autosave  SocketThread.cpp  SocketThread.h  receivecommand.cpp
src/user_proc/: user_proc.h
src/videostreaming/: ImageProvider.cpp  ImageProvider.h  ImageProvider2.cpp  ImageProvider2.h  VideoManager.cpp  VideoManager.h  VideoReceiver.cpp  VideoReceiver.h  VideoStreaming.cpp  VideoStreaming.h  VideoStreaming.pri
(+27 files in other folders)
